--- a/contact.html
+++ b/contact.html
@@ -665,7 +665,7 @@
             <h1>Get In Touch With Us</h1>
             <p>We're here to answer your questions and discuss how we can help your organization achieve its goals.</p>
             <!-- Mobile-responsive image -->
-            <img src="https://placehold.co/600x400/2563eb/ffffff?text=Contact+Us" alt="Contact B-N-ZER Consulting" class="hero-image">
+            <img src="https://lh3.googleusercontent.com/p/AF1QipNEQyx5cCZCOHaOxbeogGX-PfFJ6nd6GNkAmaiv=s1360-w1360-h1020-rw" alt="Contact B-N-ZER Consulting" class="hero-image">
         </div>
     </section>
 
